# svaba

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Dockerfile  Makefile.am  Makefile.in  README.md  autogen.sh  config.h.in  configure  configure.ac  extract_discordants.sh  filter_bx.sh  filter_contig_supporting_reads.sh  hg38.bed  hg38.blacklist.bed  memprof.sh  memprof_osx.sh  notes  r2c_for_contig.sh  region_generator.R  runtime.R  sort_and_deduplicate_bps.sh  sort_bps.sh  sort_output.sh  svaba_jemalloc  svaba_jemalloc_osx  svaba_postprocess.sh  svaba_viewer_new_new.html
snowtools/src/: Makefile.am  configure  configure.ac  deduper.cpp  deduper.h  extract.cpp  extract.h  snowUtil.cpp  snowUtil.h  snowtools.cpp
src/: Makefile.am  configure  configure.ac  gaps.bed  gaps2.bed  installSnowman.sh  issues.txt  memusg.sh  profiler.sh  test.bed
src/BWA/: BWAWrapper.cpp  BWAWrapper.h  Makefile.am
src/BedTools/: Makefile.am  bedFile.h  lineFileUtilities.h  stringUtilities.h
src/SGA/Algorithm/: Makefile.am  Makefile.in  OverlapAlgorithm.cpp  OverlapAlgorithm.h  OverlapBlock.h  StringGraphGenerator.cpp
src/SGA/Bigraph/: Bigraph.cpp  Bigraph.h  Edge.h  Makefile.am  Makefile.in  Vertex.cpp  Vertex.h
src/SGA/Concurrency/: Makefile.am  OverlapProcess.cpp  OverlapProcess.h  SequenceProcessFramework.h  SequenceWorkItem.h
src/SGA/GraphDiff/: Makefile.am  OverlapExtractorWithCorrection.cpp  OverlapHaplotypeBuilder.cpp  StringHaplotypeBuilder.cpp
src/SGA/SGA/: Makefile.am  Makefile.in  OverlapCommon.cpp  assemble.cpp  assemble.h  cluster.cpp  gmap.cpp  index.cpp  merge.cpp  overlap.cpp  overlap.h  preprocess.cpp  preprocess.h  rmdup.cpp
src/SGA/SQG/: ASQG.cpp  ASQG.h  Makefile.am  Makefile.in
src/SGA/Scaffold/: Makefile.am  ScaffoldGraph.cpp
src/SGA/StringGraph/: GraphSearchTree.h  Makefile.am  Makefile.in  SGAlgorithms.cpp  SGUtil.cpp  SGUtil.h  SGVisitors.cpp  SGVisitors.h
src/SGA/SuffixTools/: BWTAlgorithms.cpp  BWTDiskConstruction.cpp  BWTIntervalCache.cpp  Makefile.am  Makefile.in  RLBWT.cpp  RLBWT.h  SACAInducedCopying.cpp  STCommon.h  SampledSuffixArray.cpp  SuffixArray.cpp  SuffixArray.h
src/SGA/Util/: AlignedContig.h  BWTCodec.h  Bamreader.cpp  ClusterReader.cpp  DNACodec.h  HashMap.h  IntervalTree.h  Makefile.am  Makefile.in  Read2Contig.h  ReadInfoTable.cpp  ReadInfoTable.h  ReadTable.cpp  ReadTable.h  ReadTableS.h  bamreader.h  contigs.cpp  contigs.h  gzstream.C  mkqs.h  stdaln.c
src/SVaBA/: AlignmentFragment.h  BamStats.cpp  BreakPoint.cpp  BreakPoint.h  DBSnpFilter.cpp  DiscordantCluster.cpp  DiscordantCluster.h  Histogram.cpp  LearnBamParams.cpp  Makefile.am  Makefile.in  STCoverage.h  SVaBAASQG.cpp  SVaBAASQG.h  SVaBAAssemble.h  SVaBAAssemblerEngine.cpp  SVaBAAssemblerEngine.h  SVaBABamWalker.cpp  SVaBAOverlapAlgorithm.cpp  SVaBAOverlapAlgorithm.h  SVaBAUtils.cpp  SVaBAUtils.h  SVaBAWorkItem.h  refilter.cpp  svaba.cpp  vcf.cpp  vcf.h  workqueue.h
src/SVaBAUtils/: BamSplitter.h  SeqFrag.cpp  benchmark.cpp
src/SnowUtils/: ATuple.h  AuxUtils.cpp  AuxUtils.h  BamQC.cpp  BamQC.h  ClusterReads.cpp  ClusterReads.h  DiscordantCluster.cpp  DiscordantCluster.h  GenomicRegion.cpp  GenomicRegion.h  IntervalTree.h  Makefile.am  MiniRules.cpp  MiniRules.h  SAlignment.h  SVBamReader.cpp  SVBamReader.h  SVBamReader.h.bck  SeqanTools.cpp  SeqanTools.h  SnowCommon.h  SnowGlobal.h  SnowUtils.cpp  SnowUtils.h  VariantBamReader.cpp  VariantBamReader.h  reads.h  seqan_tools.cpp  seqan_tools.h
src/Snowman/: AlignedContig.cpp  AlignedContig.h  AlignedContig2.cpp  AlignedContig2.h  AlignmentFragment.cpp  AlignmentFragment.h  AssemblyBamWalker.cpp  AssemblyBamWalker.h  BamAndReads.cpp  BamAndReads.h  BamSplitter.cpp  BamSplitter.h  BamStats.h  BamToolsUtils.cpp  BamToolsUtils.h  BreakPoint.cpp  BreakPoint.h  BreakPoint2.cpp  BreakPoint2.h  CallFilter.cpp  CallFilter.h  Coverage.cpp  Coverage.h  DBSnpFilter.cpp  DBSnpFilter.h  DiscordantCluster.cpp  DiscordantCluster.h  DiscordantRealigner.cpp  DiscordantRealigner.h  GenomicRegion.cpp  GenomicRegion.h  KmerFilter.cpp  KmerFilter.h  LearnBamParams.cpp  LearnBamParams.h  Makefile.am  Makefile.in  PONFilter.cpp  PONFilter.h  PlottedRead.h  (+71 more)
src/Snowman/old/: AlignedContig2.h  MinRead.h  alignedContig.h.bak  bamprocess.cpp  gather.h  nozzle.cpp  realignreads.bak
src/SnowmanUtils/: AssemblyBamWalker.cpp  AssemblyBamWalker.h  Fractions.cpp  Fractions.h  Makefile.am  PowerLawSim.cpp  ReadSim.cpp  ReadSim.h  SeqFrag.h  SimGenome.cpp  SimGenome.h  SimTrainerWalker.cpp  assembly2vcf.cpp  benchmark.h  configure  configure.ac  snowtools.cpp  splitcounter.cpp
src/doxy/: Doxyfile
src/doxy/html/: ATuple_8h-source.html  AlignedContig_8h-source.html  AuxUtils_8h-source.html  BamAndReads_8h-source.html  BamQC_8h-source.html  BreakPoint_8h-source.html  ClusterReads_8h-source.html  DiscordantCluster_8h-source.html  GenomicRegion_8h-source.html  IntervalTree_8h-source.html  MiniRules_8h-source.html  SAlignment_8h-source.html  SeqanTools_8h-source.html  SnowCommon_8h-source.html  SnowGlobal_8h-source.html  SnowUtils_8h-source.html  SnowmanASQG_8h-source.html  SnowmanAssemble_8h-source.html  SnowmanOverlapAlgorithm_8h-source.html  annotated.html  (+31 more)
src/svaba/: AlignedContig.cpp  AlignedContig.h  AlignmentFragment.cpp  AlignmentFragment.h  BamStats.cpp  BamStats.h  BreakPoint.cpp  BreakPoint.h  ContigAlignmentScore.cpp  ContigAlignmentScore.h  DBSnpFilter.cpp  DBSnpFilter.h  DiscordantCluster.cpp  DiscordantCluster.h  DiscordantRealigner.cpp  DiscordantRealigner.h  Histogram.h  KmerFilter.cpp  KmerFilter.h  LearnBamParams.cpp  LearnBamParams.h  Makefile.am  Makefile.in  R2CDatabase.cpp  R2CDatabase.h  STCoverage.cpp  STCoverage.h  SvabaASQG.h  SvabaAssemblerConfig.h  SvabaAssemblerEngine.cpp  SvabaAssemblerEngine.h  SvabaBamWalker.cpp  SvabaBamWalker.h  SvabaDebug.h  SvabaExtractPairs.cpp  SvabaExtractPairs.h  SvabaFileLoader.cpp  SvabaFileLoader.h  SvabaLogger.cpp  SvabaLogger.h  (+56 more)
src/svabautils/: AssemblyBamWalker.h  BamSplitter.cpp  Makefile.am  Makefile.in  PowerLawSim.h  SimTrainerWalker.h  snowmanutils.cpp
(+113 files in other folders)
