AUTOMAKE_OPTIONS = foreign
##SUBDIRS = SGA/Thirdparty SGA/Util SGA/SQG SGA/Bigraph SGA/Algorithm SGA/StringGraph SGA/Concurrency SGA/SuffixTools SGA/Scaffold SGA/SGA BWA Snowman bwa
SUBDIRS = SnowTools/bwa SnowTools/htslib SnowTools/src src/SGA/SQG src/SGA/Bigraph src/SGA/Algorithm src/SGA/StringGraph src/SGA/SuffixTools src/Snowman 
