AUTOMAKE_OPTIONS = foreign
##SUBDIRS = SnowTools/blat SnowTools/bwa SnowTools/htslib SnowTools/multifast-v1.4.2/ahocorasick SnowTools/src src/SGA/SQG src/SGA/Bigraph src/SGA/Algorithm src/SGA/Util src/SGA/StringGraph src/SGA/SGA src/SGA/SuffixTools src/Snowman 
SUBDIRS = SnowTools/multifast-v1.4.2/ahocorasick SnowTools/bwa SnowTools/htslib SnowTools/src src/SGA/SQG src/SGA/Bigraph src/SGA/Algorithm src/SGA/Util src/SGA/StringGraph src/SGA/SGA src/SGA/SuffixTools src/Snowman 
